added deployment pipeline

--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Article App!</title>
+    <title>Article App</title>
   </head>
   <body onload="loadData()">
     <h2>Articles</h2>
