added deployment pipeline

--- a/public/edit.html
+++ b/public/edit.html
@@ -32,7 +32,8 @@
       "form"
     ).innerHTML += `<a href="single-article.html?id=${articleId}">Show article</a>`;
 
-    var url = `http://localhost:3000/articles/${articleId}`;
+    var url = `http://16.16.25.134:3000/articles/${articleId}`;
+    // var url = `http://localhost:3000/articles/${articleId}`;
 
     const title = document.getElementById("title");
     const body = document.getElementById("body");
