--- a/public/index.html
+++ b/public/index.html
@@ -12,7 +12,8 @@
 
     <script>
       async function loadData() {
-        var url = "http://localhost:3000/articles";
+        var url = "http://16.16.25.134:3000/articles";
+        // var url = "http://localhost:3000/articles";
         var response = await fetch(url, {
           headers: { Accept: "application/json" },
         });
