--- a/public/new.html
+++ b/public/new.html
@@ -29,7 +29,8 @@
     const body = document.getElementById("body");
     const published = document.getElementById("published");
 
-    const url = "http://localhost:3000/articles";
+    var url = "http://16.16.25.134:3000/articles";
+    // const url = "http://localhost:3000/articles";
 
     async function createArticle() {
       const publishedChecked = published.checked ? true : false;
