created alerts for empty field submits

--- a/public/edit.html
+++ b/public/edit.html
@@ -64,6 +64,11 @@
         published: publishedChecked,
       };
 
+      if (data.title == "" || data.body == "") {
+        alert("invalid credentials");
+        return;
+      }
+
       const response = await fetch(url, {
         method: "PUT",
         headers: {
