--- a/public/new.html
+++ b/public/new.html
@@ -41,6 +41,11 @@
         published: publishedChecked,
       };
 
+      if (data.title == "" || data.body == "") {
+        alert("invalid credentials");
+        return;
+      }
+
       const response = await fetch(url, {
         method: "POST",
         headers: {
