created error messages for empty field submits

--- a/public/edit.html
+++ b/public/edit.html
@@ -66,6 +66,7 @@
 
       if (title.value == "" || body.value == "") {
         error.textContent = "Title and body required";
+        console.log("did it");
         return;
       }
 
