created error messages for empty field submits

--- a/public/new.html
+++ b/public/new.html
@@ -56,7 +56,7 @@
           body: JSON.stringify(data),
         });
 
-        window.location = "index.html";
+        // window.location = "index.html";
       }
     }
   </script>
