--- a/public/index.html
+++ b/public/index.html
@@ -4,9 +4,10 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Article App</title>
+    <link rel="stylesheet" href="styles.css" />
   </head>
   <body onload="loadData()">
-    <h2>Articles</h2>
+    <h1>Articles</h1>
     <a href="new.html">New article</a>
     <div id="articles"></div>
 
@@ -23,10 +24,12 @@
         for (let i = 0; i < data.length; i++) {
           const article = data[i];
           const html = `
+          <div class="article-div">
             <h3>${article.title}</h3>
             <p>${article.body}</p>
             <p>Published: ${article.published}<p>
-            <a href="single-article.html?id=${article.id}">Show article</a>
+          </div>
+          <a href="single-article.html?id=${article.id}">Show article</a>
             `;
           articlesDiv.innerHTML += html;
         }
