--- a/public/new.html
+++ b/public/new.html
@@ -4,25 +4,32 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>New article</title>
+    <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
+    <h3 id="error" class="error"></h3>
     <h2>New Article</h2>
-    <div id="form">
-      <h3 id="error"></h3>
-      <label for="title">Title</label>
-      <input type="text" name="title" id="title" />
-      <label for="body">Body</label>
-      <input type="text" name="body" id="body" />
-      <label for="published">Published</label>
-      <input
-        type="checkbox"
-        name="published"
-        id="published"
-        class="published"
-      />
-      <button onclick="createArticle()">Add article</button>
-      <a href="index.html">Back to articles</a>
+    <div id="form" class="form">
+      <div>
+        <label for="title">Title</label>
+        <input type="text" name="title" id="title" />
+      </div>
+      <div>
+        <label for="body">Body</label>
+        <input type="text" name="body" id="body" />
+      </div>
+      <div>
+        <label for="published">Published</label>
+        <input
+          type="checkbox"
+          name="published"
+          id="published"
+          class="published"
+        />
+      </div>
     </div>
+    <button onclick="createArticle()">Add article</button>
+    <a href="index.html">Back to articles</a>
   </body>
 
   <script>
